--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ body {
 {
     height: 40px;
 }
+#how_know
+{
+    color: black;
+}
 a,
 button {
     transition: all .3s ease-in-out;
@@ -779,7 +783,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(87, 81, 50, 1);
     padding: 40px 40px 40px 40px;
 }
 
@@ -801,7 +805,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
