modification JS et focus menu

--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ button {
 	transition: all 0.3s ease-in-out;
 	outline: none !important;
 }
-
 a:hover {
 	text-decoration: none;
 	cursor: pointer;
@@ -353,7 +352,7 @@ a:hover {
 
 .nav > li a:hover,
 .nav > li a:focus {
-	background: transparent;
+	background: #f3976c;
 }
 
 .navbar-toggle {
@@ -871,18 +870,6 @@ h4 {
 	}
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
-	.b-parallax {
-		background-attachment: scroll;
-	}
-}
-
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
-	.b-parallax {
-		background-attachment: scroll;
-	}
-}
-
 @media (max-width: 991px) {
 	.container {
 		width: 100%;
@@ -903,10 +890,6 @@ h4 {
 		overflow-x: hidden;
 		position: relative;
 	}
-	.bloc {
-		padding-left: constant(safe-area-inset-left);
-		padding-right: constant(safe-area-inset-right);
-	}
 	.bloc-group,
 	.bloc-group .bloc {
 		display: block;
@@ -915,8 +898,6 @@ h4 {
 	.bloc-fill-screen .fill-bloc-top-edge,
 	.bloc-fill-screen .fill-bloc-bottom-edge {
 		padding: 0 20px;
-		padding-left: constant(safe-area-inset-left);
-		padding-right: constant(safe-area-inset-right);
 	}
 }
 
